calculadoraParser.py
# Generated from calculadora.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class calculadoraParser ( Parser ):

    grammarFileName = "calculadora.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'for'", "'in'", "'to'", "':'", 
                     "'end'", "'if'", "'then'", "'else'", "'while'", "'do'", 
                     "'print'", "'def'", "'('", "')'", "','", "'**'", "'['", 
                     "'T'", "']'", "'I'", "'.'", "'head'", "'mean'", "'describe'", 
                     "'series'", "'append'", "'remove'", "'index'", "'len'", 
                     "'pop'", "'get_key'", "'get_value'", "'add_entry'", 
                     "'remove_entry'", "'plot'", "'line'", "'bar'", "'scatter'", 
                     "'hist'", "'box'", "'open'", "'write'", "'writelines'", 
                     "'read'", "'delete'", "'close'", "'csv'", "'leer_csv'", 
                     "'return'", "'factorial'", "'euclides'", "'repetida'", 
                     "'{'", "'}'", "'DataFrame'", "'!'", "'++'", "'--'", 
                     "'*'", "'/'", "'+'", "'-'", "'%'", "'^'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'tan'", "'cos'", "'sen'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NOT", "INCREMENT", "DECREMENT", "MUL", 
                      "DIV", "ADD", "SUB", "MOD", "ROOT", "EQ", "NEQ", "LT", 
                      "GT", "LE", "GE", "TAN", "COS", "SEN", "BOOL", "ID", 
                      "INT", "FLOAT", "STRING", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_params = 2
    RULE_expr = 3
    RULE_matrix = 4
    RULE_matrix_contents = 5
    RULE_row = 6
    RULE_list = 7
    RULE_tupla = 8
    RULE_list_contents = 9
    RULE_dicti = 10
    RULE_dict_contents = 11
    RULE_dict_access = 12
    RULE_dict_entry = 13
    RULE_dataframe = 14
    RULE_args = 15

    ruleNames =  [ "prog", "stat", "params", "expr", "matrix", "matrix_contents", 
                   "row", "list", "tupla", "list_contents", "dicti", "dict_contents", 
                   "dict_access", "dict_entry", "dataframe", "args" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    NOT=57
    INCREMENT=58
    DECREMENT=59
    MUL=60
    DIV=61
    ADD=62
    SUB=63
    MOD=64
    ROOT=65
    EQ=66
    NEQ=67
    LT=68
    GT=69
    LE=70
    GE=71
    TAN=72
    COS=73
    SEN=74
    BOOL=75
    ID=76
    INT=77
    FLOAT=78
    STRING=79
    NEWLINE=80
    WS=81

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.StatContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.StatContext,i)


        def getRuleIndex(self):
            return calculadoraParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = calculadoraParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.stat()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return calculadoraParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(calculadoraParser.NEWLINE)
            else:
                return self.getToken(calculadoraParser.NEWLINE, i)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.StatContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class FunctionDefContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(calculadoraParser.ID, 0)
        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)
        def params(self):
            return self.getTypedRuleContext(calculadoraParser.ParamsContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.StatContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(calculadoraParser.ID, 0)
        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)
        def args(self):
            return self.getTypedRuleContext(calculadoraParser.ArgsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class ForStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(calculadoraParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.ExprContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.ExprContext,i)

        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.StatContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(calculadoraParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(calculadoraParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(calculadoraParser.NEWLINE)
            else:
                return self.getToken(calculadoraParser.NEWLINE, i)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.StatContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = calculadoraParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = calculadoraParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.expr(0)
                self.state = 38
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = calculadoraParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.match(calculadoraParser.ID)
                self.state = 41
                self.match(calculadoraParser.T__0)
                self.state = 42
                self.expr(0)
                self.state = 43
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = calculadoraParser.ForStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(calculadoraParser.T__1)
                self.state = 46
                self.match(calculadoraParser.ID)
                self.state = 47
                self.match(calculadoraParser.T__2)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(calculadoraParser.T__3)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(calculadoraParser.T__4)
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 52
                    self.stat()
                    self.state = 55 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                        break

                self.state = 57
                self.match(calculadoraParser.T__5)
                self.state = 58
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = calculadoraParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.match(calculadoraParser.T__6)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(calculadoraParser.T__7)
                self.state = 63
                self.match(calculadoraParser.NEWLINE)
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 64
                    self.stat()
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                        break

                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 69
                    self.match(calculadoraParser.T__8)
                    self.state = 70
                    self.match(calculadoraParser.NEWLINE)
                    self.state = 72 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 71
                        self.stat()
                        self.state = 74 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                            break



                self.state = 78
                self.match(calculadoraParser.T__5)
                self.state = 79
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 5:
                localctx = calculadoraParser.WhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.match(calculadoraParser.T__9)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.match(calculadoraParser.T__10)
                self.state = 84
                self.match(calculadoraParser.NEWLINE)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 85
                    self.stat()
                    self.state = 88 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                        break

                self.state = 90
                self.match(calculadoraParser.T__5)
                self.state = 91
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 6:
                localctx = calculadoraParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.match(calculadoraParser.T__11)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 7:
                localctx = calculadoraParser.FunctionDefContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.match(calculadoraParser.T__12)
                self.state = 98
                self.match(calculadoraParser.ID)
                self.state = 99
                self.match(calculadoraParser.T__13)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==76:
                    self.state = 100
                    self.params()


                self.state = 103
                self.match(calculadoraParser.T__14)
                self.state = 104
                self.match(calculadoraParser.T__4)
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 105
                    self.stat()
                    self.state = 108 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582067580) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 511) != 0)):
                        break

                self.state = 110
                self.match(calculadoraParser.T__5)
                self.state = 111
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 8:
                localctx = calculadoraParser.FunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 113
                self.match(calculadoraParser.ID)
                self.state = 114
                self.match(calculadoraParser.T__13)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -8972291959582081024) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 255) != 0):
                    self.state = 115
                    self.args()


                self.state = 118
                self.match(calculadoraParser.T__14)
                self.state = 119
                self.match(calculadoraParser.NEWLINE)
                pass

            elif la_ == 9:
                localctx = calculadoraParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.match(calculadoraParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(calculadoraParser.ID)
            else:
                return self.getToken(calculadoraParser.ID, i)

        def getRuleIndex(self):
            return calculadoraParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = calculadoraParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(calculadoraParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 124
                self.match(calculadoraParser.T__15)
                self.state = 125
                self.match(calculadoraParser.ID)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return calculadoraParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CrearCsvContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)

        def STRING(self):
            return self.getToken(calculadoraParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCrearCsv" ):
                listener.enterCrearCsv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCrearCsv" ):
                listener.exitCrearCsv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCrearCsv" ):
                return visitor.visitCrearCsv(self)
            else:
                return visitor.visitChildren(self)


    class GetDictKeyContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.ExprContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetDictKey" ):
                listener.enterGetDictKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetDictKey" ):
                listener.exitGetDictKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetDictKey" ):
                return visitor.visitGetDictKey(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(calculadoraParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class OpenFileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(calculadoraParser.ExprContext)
            else:
                return self.getTypedRuleContext(calculadoraParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenFile" ):
                listener.enterOpenFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenFile" ):
                listener.exitOpenFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpenFile" ):
                return visitor.visitOpenFile(self)
            else:
                return visitor.visitChildren(self)


    class GraficaBarrasContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a calculadoraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
